Introduce /g/list/[doctype] route and add /api/db/dump route

--- a/src/styles/auth.module.css
+++ b/src/styles/auth.module.css
@@ -46,6 +46,10 @@
   background: #fff;
 }
 
+.inputError {
+  border: 1px solid red;
+}
+
 .button {
   padding: 10px;
   background-color: #f2f2f2;
