--- a/src/styles/header.module.css
+++ b/src/styles/header.module.css
@@ -1,6 +1,7 @@
 .header {
   width: 100%;
-  background-color: #0F0F70;
+  /* background-color: #0F0F70; */
+  border-bottom: 1px solid black;
   padding: 10px 24px;
   display: flex;
   justify-content: center;
@@ -24,14 +25,14 @@
 .logo {
   font-size: 18px;
   font-weight: 700;
-  color: #ffffff;
+  /* color: #ffffff; */
   margin-right: 20px;
 }
 
 .navItem {
   background: none;
   border: none;
-  color: #f5f5f5;
+  /* color: #f5f5f5; */
   font-size: 14px;
   cursor: pointer;
   transition: opacity 0.2s;
