--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,13 @@
 @import "github-markdown-css/github-markdown.css";
 
+.documentlist-container {
+  padding: 24px;
+}
+
+.documentview-container {
+  padding: 24px;
+}
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
